--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,10 @@
           <button id="vote-button" type="button">Vote</button>
         </form>
       </div>
+      
+      <button id="deploy-account" type="button" style="display: none">
+        deploy-account
+      </button>
 
       <div id="status-message" class="status-message"></div>
     </main>
